--- a/style.css
+++ b/style.css
@@ -1,3 +1,42 @@
+/*styling for header*/
 .header{
     text-align: left;
+    background-color: #796b65;
+    padding: 5px 5px 0px;
+    border-style: none;
+}
+/*master styling for body*/
+body{
+    margin:0;
+    background-image: url("file:///C:/Users/rowst/MountainsideLifestyle/background.png");
+    background-repeat: repeat-x;
+    background-size: 1080px 1080px;
+}
+
+/*give nav bar base color*/
+.topnav {
+    background-color: rgb(63, 60, 57);
+    overflow: hidden;
+}
+
+/* Style the links inside the nav bar */
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: rgb(65, 148, 148);
+    color: white;
 }
