--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@
     padding: 5px 5px 0px;
     border-style: none;
 }
+/*styling for search bar*/
+.header input[type=text] {
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+}
+
 /*master styling for body*/
 body{
     margin:0;
@@ -24,9 +33,11 @@ body{
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 50px;
     text-decoration: none;
     font-size: 17px;
+    border-style: none solid;
+    border-width: 1px;
 }
 
 /* Change the color of links on hover */
